[gd_scene load_steps=3 format=3 uid="uid://ntd8qb6u8ojg"]

[ext_resource type="Script" uid="uid://b2d0lenxcqj5q" path="res://scripts/main.gd" id="1_o6xl0"]
[ext_resource type="PackedScene" uid="uid://iuvrtg2naywa" path="res://scenes/level_1.tscn" id="3_sugp2"]

[node name="Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_o6xl0")
world = ExtResource("3_sugp2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FireViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
offset_right = 512.0
offset_bottom = 512.0

[node name="FireViewport" type="SubViewport" parent="CanvasLayer/FireViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="World" parent="CanvasLayer/FireViewportContainer/FireViewport" instance=ExtResource("3_sugp2")]

[node name="FireCamera" type="Camera2D" parent="CanvasLayer/FireViewportContainer/FireViewport"]
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 1000000
limit_bottom = 1000000

[node name="WaterViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
offset_left = 576.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="WaterViewport" type="SubViewport" parent="CanvasLayer/WaterViewportContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(576, 648)
render_target_update_mode = 4

[node name="WaterCamera" type="Camera2D" parent="CanvasLayer/WaterViewportContainer/WaterViewport"]
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 1000000
limit_bottom = 1000000

[node name="ScreenDivider" type="ColorRect" parent="CanvasLayer"]
z_index = 1
custom_minimum_size = Vector2(2, 648)
offset_left = 574.0
offset_right = 578.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="GameOverScreen" type="Node2D" parent="CanvasLayer"]
visible = false
z_index = 1000

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameOverScreen"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.45098, 0.45098, 0.45098, 0.666667)

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOverScreen"]
offset_left = 311.0
offset_top = 110.0
offset_right = 854.0
offset_bottom = 247.0
theme_override_font_sizes/font_size = 100
text = "Game Over"

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverScreen"]
offset_left = 462.0
offset_top = 448.0
offset_right = 701.0
offset_bottom = 527.0
theme_override_font_sizes/font_size = 36
text = "Try Again"

[connection signal="pressed" from="CanvasLayer/GameOverScreen/RestartButton" to="." method="_on_restart_button_pressed"]
